--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FocusQuest</title>
     <link rel="stylesheet" href="style.css" />
+    <script async src="https://plausible.io/js/pa-oF1niFROnV1QlaC8hmNOs.js"></script>
+    <script>
+        window.plausible = window.plausible || function () { (plausible.q = plausible.q || []).push(arguments) }, plausible.init = plausible.init || function (i) { plausible.o = i || {} };
+        plausible.init()
+    </script>
 </head>
 
 <body>
